2005-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transactor.hxx:
  - Fixed incorrect comment, thanks Joshua Moore-Oliva
2005-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Fixed typo in automake check
  - Used "which" so $PATH is respected (thanks Pawel Niewiadomski)
 include/pqxx/cachedresult.h, include/pqxx/cursor.h:
  - error_permitted_isolation_level() is no longer a template
  - no longer needs incorrect workarounds for Visual C++ and old Sun compilers
 include/pqxx/compiler.h, include/pqxx/libcompiler.h:
  - Moved Visual C++ NOMINMAX fix to libcompiler.h
  - Retired workarounds for problematic error_permitted_isolation_level()
2005-02-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 pqxx-config.in:
  - Fixed painful typo in help output, thanks Tommi Maekitalo
2005-02-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Fixed broken workaround for SunC++ problem, thanks again mark@markround.com
 src/pipeline.cxx:
  - Added missing include
  - Should fix that last remaining SunC++ error
2005-02-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler.h:
  - Check if evil min() and max() aren't defined already, thanks Bart Samwel!
 src/pipeline.cxx:
  - More fixes for SunC++
  - One error with SunC++ remains (std::distance() won't work)
2005-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cachedresult.cxx, src/cursor.cxx:
  - Fixes for SunC++, thanks mark@markround.com
2005-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler.h:
  - Finally defined NOMINMAX, thanks Trevor Morgan!
  - Should solve large object test failures on Windows
2005-01-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Workaround for BSD grep which doesn't support "-f -"
2005-01-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - Fixed typo in Sun compiler workaround, thanks mark@markround.com
2004-12-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx: